[Media Router] Ensure the same FeatureSwitch is used for lifetime of the browser.

We noticed that with Cast Extension enabled, the component action
toolbar logic will end up using the EnableMediaRouterWithCastExtension
field trial during the call to MediaRouterEnabled(). If so, the
Cast Extension will be unloaded. Code executed subsequently use
EnableMediaRouter field trial during the call to MediaRouterEnabled().
This could be a problem for users with certain field trial group
configurations and results in inconsistencies (e.g., has Cast button
in toolbar, but opens error page when clicked due to WebUI not found).

The decision is to no longer rely on the EMRWCE field trial. For one,
the mechanism to switch on BrowserContext to return the correct field
trial consistently require a complicated mechanism, and we will still
end up with some corner cases that result in strange behavior. In
addition, having both field trials make analyzing the data more
difficult.

BUG=605165

Review URL: https://codereview.chromium.org/1907673002

Cr-Commit-Position: refs/heads/master@{#389175}

Former-commit-id: f735fb21eb9fdc1cade2b8a30217b8c5dc626b90